# investiment-funds-management

./: .pre-commit-config.yaml  LICENSE  Makefile  Pipfile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: clients.md
funds_manager/: manage.py
funds_manager/funds_manager/: asgi.py  settings.py  urls.py  wsgi.py
technical_documentation/docs/: index.md
